[gd_scene load_steps=12 format=4 uid="uid://cqo8for1njqyq"]

[ext_resource type="Texture2D" uid="uid://cgegl0sdyhr8k" path="res://Textures/pixel_assets/bathroom/BathroomTiles.png" id="1_dk201"]
[ext_resource type="Script" path="res://OverworldContent/restroom.gd" id="1_qt82t"]
[ext_resource type="Texture2D" uid="uid://dccfojy7hmbbj" path="res://Textures/pixel_assets/ShipTiles/Space.png" id="2_ycqs0"]
[ext_resource type="Texture2D" uid="uid://dv01tvwong67h" path="res://Textures/pixel_assets/ShipTiles/floor tile large.png" id="3_wo8ss"]
[ext_resource type="PackedScene" uid="uid://tpxunwtho7ya" path="res://OverworldContent/Player.tscn" id="4_r6ln1"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_fbsi5"]
texture = ExtResource("1_dk201")
texture_region_size = Vector2i(32, 32)
1:0/0 = 0
1:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
2:0/0 = 0
2:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
3:0/0 = 0
3:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 12, 8, 12, 4, 16, -4, 16, -8, 12, -16, 12)
0:1/0 = 0
0:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 12, 8, 12, 4, 16, -4, 16, -8, 12, -16, 12)
1:1/0 = 0
1:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 12, -16, 12)
2:1/0 = 0
2:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -12, 16, -12, 12, -16, 12)
0:0/0 = 0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, 12, 12, 12, -4, 8, -8, -8, -8, -12, -4, -12, 16, -16, 16)

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_ppt3j"]
texture = ExtResource("2_ycqs0")
texture_region_size = Vector2i(32, 32)
0:0/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_jhcyk"]
texture = ExtResource("3_wo8ss")
texture_region_size = Vector2i(32, 32)
0:0/0 = 0

[sub_resource type="TileSet" id="TileSet_wdlvg"]
tile_size = Vector2i(32, 32)
physics_layer_0/collision_layer = 1
sources/7 = SubResource("TileSetAtlasSource_fbsi5")
sources/8 = SubResource("TileSetAtlasSource_ppt3j")
sources/9 = SubResource("TileSetAtlasSource_jhcyk")
tile_proxies/coords_level = [[0, Vector2i(0, 0)], [7, Vector2i(0, 0)], [1, Vector2i(0, 0)], [7, Vector2i(1, 0)], [2, Vector2i(0, 0)], [7, Vector2i(2, 0)], [3, Vector2i(0, 0)], [7, Vector2i(3, 0)], [4, Vector2i(0, 0)], [7, Vector2i(0, 1)], [5, Vector2i(0, 0)], [7, Vector2i(1, 1)], [6, Vector2i(0, 0)], [7, Vector2i(2, 1)]]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_daemg"]
size = Vector2(21, 24)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_e2qit"]
size = Vector2(58.5, 29.5)

[node name="Restroom" type="Node2D"]
script = ExtResource("1_qt82t")

[node name="SubViewportContainer" type="SubViewportContainer" parent="."]
texture_filter = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_right = 256.0
offset_bottom = 224.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(4, 4)

[node name="SubViewport" type="SubViewport" parent="SubViewportContainer"]
handle_input_locally = false
size = Vector2i(256, 224)
render_target_update_mode = 4

[node name="World" type="TileMapLayer" parent="SubViewportContainer/SubViewport"]
texture_filter = 1
tile_map_data = PackedByteArray("AAACAAAABwADAAAAAAADAAAABwACAAEAAAABAAAABwAAAAEAAAAEAAAABwACAAAAAFAAAAAABwACAAEAAGAAAAQABwACAAAAADAEAAQABwABAAAAAFAAAAEABwABAAEAAGAAAAIABwAAAAAAAGAAAAMABwACAAEAADABAAQABwACAAAAADACAAQABwACAAAAADADAAQABwACAAAAADAEAAMABwACAAAAAFAEAAIABwACAAAAAFAEAAEABwACAAAAAFABAAEACQAAAAAAAAACAAEACQAAAAAAAAADAAEABwABAAEAAFADAAIABwABAAEAAFACAAIACQAAAAAAAAABAAIACQAAAAAAAAABAAMABwABAAEAADACAAMABwABAAEAADADAAMABwACAAEAAFAAAP//BwACAAAAAAABAP//BwACAAAAAAACAP//BwACAAAAAAADAP//BwACAAAAAAAEAP//BwABAAAAAAAFAAAACAAAAAAAAAAFAAEACAAAAAAAAAAFAAIACAAAAAAAAAAFAAMACAAAAAAAAAAFAAQACAAAAAAAAAAEAAUACAAAAAAAAAADAAUACAAAAAAAAAACAAUACAAAAAAAAAABAAUACAAAAAAAAAAAAAUACAAAAAAAAAD//wQABwABAAAAADD//wMABwACAAAAAGD//wIABwACAAAAAGD//wEABwACAAAAAGD//wAABwACAAAAAGAFAP//CAAAAAAAAAAFAAUACAAAAAAAAAD//wUACAAAAAAAAAD/////BwABAAAAAGD+//7/CAAAAAAAAAD///7/CAAAAAAAAAAAAP7/CAAAAAAAAAABAP7/CAAAAAAAAAACAP7/CAAAAAAAAAADAP7/CAAAAAAAAAAEAP7/CAAAAAAAAAAFAP7/CAAAAAAAAAAGAP7/CAAAAAAAAAAGAP//CAAAAAAAAAAGAAAACAAAAAAAAAAGAAEACAAAAAAAAAAGAAIACAAAAAAAAAAGAAMACAAAAAAAAAAGAAQACAAAAAAAAAAGAAUACAAAAAAAAAAGAAYACAAAAAAAAAD+/wYACAAAAAAAAAD//wYACAAAAAAAAAAAAAYACAAAAAAAAAABAAYACAAAAAAAAAACAAYACAAAAAAAAAADAAYACAAAAAAAAAAEAAYACAAAAAAAAAAFAAYACAAAAAAAAAD+////CAAAAAAAAAD+/wAACAAAAAAAAAD+/wEACAAAAAAAAAD+/wIACAAAAAAAAAD+/wMACAAAAAAAAAD+/wQACAAAAAAAAAD+/wUACAAAAAAAAAD+//3/CAAAAAAAAAD///3/CAAAAAAAAAAAAP3/CAAAAAAAAAABAP3/CAAAAAAAAAACAP3/CAAAAAAAAAADAP3/CAAAAAAAAAAEAP3/CAAAAAAAAAAFAP3/CAAAAAAAAAAGAP3/CAAAAAAAAAAHAP3/CAAAAAAAAAAHAP7/CAAAAAAAAAAHAP//CAAAAAAAAAAHAAAACAAAAAAAAAAIAAEACAAAAAAAAAAIAAIACAAAAAAAAAAIAAMACAAAAAAAAAAIAAQACAAAAAAAAAAIAAUACAAAAAAAAAAIAAYACAAAAAAAAAAHAAYACAAAAAAAAAAHAAUACAAAAAAAAAAHAAQACAAAAAAAAAAHAAMACAAAAAAAAAAHAAIACAAAAAAAAAAHAAEACAAAAAAAAAAIAAAACAAAAAAAAAAIAP//CAAAAAAAAAAIAP7/CAAAAAAAAAAIAP3/CAAAAAAAAAD9//3/CAAAAAAAAAD9//7/CAAAAAAAAAD9////CAAAAAAAAAD9/wAACAAAAAAAAAD9/wEACAAAAAAAAAD9/wIACAAAAAAAAAD9/wMACAAAAAAAAAD9/wQACAAAAAAAAAD9/wUACAAAAAAAAAD9/wYACAAAAAAAAAD9/wcACAAAAAAAAAD8/wcACAAAAAAAAAD8/wYACAAAAAAAAAD8/wUACAAAAAAAAAD8/wQACAAAAAAAAAD8/wMACAAAAAAAAAD8/wIACAAAAAAAAAD8/wEACAAAAAAAAAD8/wAACAAAAAAAAAD8////CAAAAAAAAAD8//3/CAAAAAAAAAD8//7/CAAAAAAAAAD+/wcACAAAAAAAAAD//wcACAAAAAAAAAAAAAcACAAAAAAAAAABAAcACAAAAAAAAAACAAcACAAAAAAAAAADAAcACAAAAAAAAAAEAAcACAAAAAAAAAAGAAcACAAAAAAAAAAHAAcACAAAAAAAAAAIAAcACAAAAAAAAAAFAAcACAAAAAAAAAA=")
tile_set = SubResource("TileSet_wdlvg")

[node name="Player" parent="SubViewportContainer/SubViewport" instance=ExtResource("4_r6ln1")]
position = Vector2(43, 80)

[node name="ExitArea" type="Area2D" parent="SubViewportContainer/SubViewport"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="SubViewportContainer/SubViewport/ExitArea"]
position = Vector2(23.5, 80)
shape = SubResource("RectangleShape2D_daemg")

[node name="LevelResetArea" type="Area2D" parent="SubViewportContainer/SubViewport"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="SubViewportContainer/SubViewport/LevelResetArea"]
position = Vector2(63.75, 26.25)
shape = SubResource("RectangleShape2D_e2qit")

[connection signal="body_entered" from="SubViewportContainer/SubViewport/ExitArea" to="." method="_on_exit_area_body_entered"]
[connection signal="body_entered" from="SubViewportContainer/SubViewport/LevelResetArea" to="." method="_on_level_reset_area_body_entered"]
[connection signal="body_exited" from="SubViewportContainer/SubViewport/LevelResetArea" to="." method="_on_level_reset_area_body_exited"]
